use tribool instead of protobuf bool
Protobuf v3 bools do not send the default value ("false"). By adding
the unspecified enum "false" can be distinguished from "not-set".
