# api/swagger/v1/blitzd.swagger.json
@@ -157,12 +157,12 @@
     "v1Kind": {
       "type": "string",
       "enum": [
-        "UNKNOWN_KIND",
-        "STATIC",
-        "TIME_BASED",
-        "EVENT_BASED"
+        "KIND_UNSPECIFIED",
+        "KIND_STATIC",
+        "KIND_TIME_BASED",
+        "KIND_EVENT_BASED"
       ],
-      "default": "UNKNOWN_KIND"
+      "default": "KIND_UNSPECIFIED"
     },
     "v1Metric": {
       "type": "object",
@@ -193,8 +193,7 @@
           "format": "date-time"
         },
         "expired": {
-          "type": "boolean",
-          "format": "boolean"
+          "$ref": "#/definitions/v1Tribool"
         },
         "value": {
           "type": "string"
@@ -225,14 +224,23 @@
     "v1Style": {
       "type": "string",
       "enum": [
-        "UNKNOWN_STYLE",
-        "NORMAL",
-        "HIGHLIGHT",
-        "WARNING",
-        "ERROR",
-        "CRITICAL"
+        "STYLE_UNSPECIFIED",
+        "STYLE_NORMAL",
+        "STYLE_HIGHLIGHT",
+        "STYLE_WARNING",
+        "STYLE_ERROR",
+        "STYLE_CRITICAL"
       ],
-      "default": "UNKNOWN_STYLE"
+      "default": "STYLE_UNSPECIFIED"
+    },
+    "v1Tribool": {
+      "type": "string",
+      "enum": [
+        "TRIBOOL_UNSPECIFIED",
+        "TRIBOOL_TRUE",
+        "TRIBOOL_FALSE"
+      ],
+      "default": "TRIBOOL_UNSPECIFIED"
     }
   }
 }
